[gd_scene load_steps=11 format=3 uid="uid://dij4tge2f2fo4"]

[ext_resource type="Script" uid="uid://cdul2waekejk3" path="res://scripts/message_bar.gd" id="1_ckpww"]
[ext_resource type="Texture2D" uid="uid://bbgku5jocqs32" path="res://Sprites/msg_bar icons/micro.png" id="2_6ummh"]
[ext_resource type="Texture2D" uid="uid://cxsf0ygu8e4jw" path="res://Sprites/msg_bar icons/send.png" id="2_co83d"]
[ext_resource type="Texture2D" uid="uid://nqft4gvle04u" path="res://Sprites/msg_bar icons/audio_player/play.png" id="2_p0lsb"]
[ext_resource type="Script" path="res://scripts/record.gd" id="2_rvxtb"]
[ext_resource type="Texture2D" uid="uid://dihhn0u1cskib" path="res://Sprites/msg_bar icons/audio_player/pause.png" id="3_p0lsb"]
[ext_resource type="Texture2D" uid="uid://p6my84vry2do" path="res://Sprites/msg_bar icons/audio_player/cancel.png" id="4_pemkg"]

[sub_resource type="LabelSettings" id="LabelSettings_pemkg"]
font_size = 12

[sub_resource type="AudioStreamMicrophone" id="AudioStreamMicrophone_co83d"]

[sub_resource type="LabelSettings" id="LabelSettings_ckpww"]
font_size = 12

[node name="message_bar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ckpww")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(355, 72)
layout_mode = 2
offset_left = 335.0
offset_top = 535.0
offset_right = 690.0
offset_bottom = 607.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8

[node name="audio" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="play" type="Button" parent="VBoxContainer/audio"]
layout_mode = 2
icon = ExtResource("2_p0lsb")
flat = true

[node name="pause" type="Button" parent="VBoxContainer/audio"]
layout_mode = 2
icon = ExtResource("3_p0lsb")
flat = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/audio"]
layout_mode = 2

[node name="time" type="HSlider" parent="VBoxContainer/audio/HBoxContainer"]
custom_minimum_size = Vector2(270, 0)
layout_mode = 2
scrollable = false

[node name="Cancel" type="TextureButton" parent="VBoxContainer/audio/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_pemkg")

[node name="duration" type="Label" parent="VBoxContainer/audio/HBoxContainer/Cancel"]
layout_mode = 0
offset_left = -273.5
offset_top = 14.0
offset_right = -241.5
offset_bottom = 31.0
text = "00:00"
label_settings = SubResource("LabelSettings_pemkg")
horizontal_alignment = 3

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(355, 72)
layout_mode = 2
size_flags_vertical = 8
wrap_mode = 1
scroll_fit_content_height = true
caret_blink = true

[node name="Record" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_rvxtb")

[node name="Record" type="Button" parent="Record"]
layout_mode = 0
offset_left = 697.0
offset_top = 536.0
offset_right = 769.0
offset_bottom = 608.0
icon = ExtResource("2_6ummh")

[node name="microphone" type="AudioStreamPlayer" parent="Record"]
stream = SubResource("AudioStreamMicrophone_co83d")
autoplay = true
bus = &"Record"

[node name="preview" type="AudioStreamPlayer" parent="Record"]
autoplay = true

[node name="Send" type="Button" parent="."]
layout_mode = 2
offset_left = 775.0
offset_top = 535.0
offset_right = 847.0
offset_bottom = 607.0
size_flags_horizontal = 8
icon = ExtResource("2_co83d")

[node name="max_letters" type="Label" parent="."]
layout_mode = 0
offset_left = 640.0
offset_top = 610.0
offset_right = 686.0
offset_bottom = 627.0
text = "0/300"
label_settings = SubResource("LabelSettings_ckpww")
horizontal_alignment = 2

[connection signal="pressed" from="VBoxContainer/audio/play" to="Record" method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/audio/pause" to="Record" method="_on_pause_pressed"]
[connection signal="value_changed" from="VBoxContainer/audio/HBoxContainer/time" to="Record" method="_on_time_value_changed"]
[connection signal="pressed" from="VBoxContainer/audio/HBoxContainer/Cancel" to="Record" method="_on_cancel_pressed"]
[connection signal="Record" from="Record" to="." method="_on_record_record"]
[connection signal="pressed" from="Record/Record" to="Record" method="_on_record_pressed"]
[connection signal="pressed" from="Send" to="." method="_on_send_pressed"]
